--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,46 @@
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+/* VARS */
+:root {
+  /* FONT SIZE */
+  --font-base: 1.6rem;
+  --font-small: 1.4rem;
+  --font-smaller: 1.2rem;
+}
+
+/* MD */
+/* sm	640px	@media (min-width: 640px) { ... }
+md	768px	@media (min-width: 768px) { ... }
+lg	1024px	@media (min-width: 1024px) { ... }
+xl	1280px	@media (min-width: 1280px) { ... }
+2xl	1536px	@media (min-width: 1536px) { ... } */
+
+@media screen and (min-width: 1280px) {
+  :root {
+    --font-base: 1.8rem;
+    --font-small: 1.6rem;
+    --font-smaller: 1.4rem;
+  }
+}
+
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: var(--font-base);
 }
 
 code {
