--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 #root {
-  background-color: #282c34;
+  background-color: var(--body--color);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--font-color);
+  animation: fadeIn 0.3s linear;
 }
