--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,18 @@ html {
 /* VARS */
 :root {
   /* COLORS */
-  --body--color: #282c34;
+  --body--color: hsl(220, 13%, 18%);
+  --body--color-alt: hsl(220, 13%, 25%);
   --font-color: #fff;
   /* FONT SIZE */
   --font-base: 1.6rem;
   --font-small: 1.4rem;
   --font-smaller: 1.2rem;
+
+  /* OTHER */
+
+  --radius: 0.375em;
+  --shadow: 0 0.25em 2.2rem hsla(220, 13%, 10%, 0.25);
 }
 
 /* MD */
@@ -49,6 +55,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+button,
+input {
+  font-size: 1.6rem;
 }
 
 @keyframes fadeIn {
