--- a/src/pages/Search/index.css
+++ b/src/pages/Search/index.css
@@ -4,10 +4,14 @@
   flex-direction: column;
 }
 
-.Search form {
+.Search__interacions-search {
   width: 50%;
   max-width: 42rem;
   align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 1em;
 }
 
 .Search__show-result {
