add trending searches in home

--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -27,3 +27,24 @@
 .Home form {
   margin-bottom: 2em;
 }
+
+.Home__searches {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 0.75em;
+}
+
+.Home__searches a {
+  font-size: 0.875em;
+  color: var(--white);
+  text-decoration: underline;
+  animation: fadeIn 240ms linear;
+}
+
+.Home__searches a:hover {
+  color: var(--primary-color);
+}
