--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: var(--font-base);
+  background-color: var(--body--color);
 }
 
 code {
