--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -34,7 +34,7 @@
   margin-right: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
   gap: 0.75em;
 }
 
