--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ html {
   --body--color-alt: hsl(220, 13%, 25%);
   --font-color: #fff;
   --primary-color: hsl(246, 80%, 60%);
+  --error-color: hsl(2, 100%, 64%);
   /* FONT SIZE */
   --font-base: 1.6rem;
   --font-small: 1.4rem;
