add infiniti scrooll

--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -1,5 +1,6 @@
 .Grid {
   width: 100%;
+  min-height: 45vh;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
   gap: 2em 1em;
