--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -1,14 +1,15 @@
 .Home {
   height: 100vh;
   display: flex;
-  padding-top: 3em;
+  padding-top: 2em;
+  padding-bottom: 1em;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
+  color: white;
 }
 
 .Home__picture {
-  width: 14em;
+  width: 16rem;
   margin-bottom: 1.125em;
 }
 
@@ -26,21 +27,23 @@
 
 .Home form {
   margin-bottom: 2em;
+  width: 75%;
+  max-width: 40rem;
 }
 
 .Home__searches {
-  width: 75%;
-  margin-left: auto;
-  margin-right: auto;
+  width: 86%;
+  max-width: 80rem;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 0.75em;
+  justify-content: space-evenly;
+  gap: 0.25em 1em;
+  margin-inline: auto;
 }
 
 .Home__searches a {
   font-size: 0.875em;
-  color: var(--white);
+  color: var(--font-color);
   text-decoration: underline;
   animation: fadeIn 240ms linear;
 }
