--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,14 @@
 .alert {
   display: block;
   width: 100%;
-  padding: 0.5em 1em;
-  border-radius: 0.315em;
+  max-width: 40rem;
+  padding: 0.25em 2em;
+  border-radius: 0.4rem;
+  border: 1px solid;
   color: var(--error-color);
   font-weight: 600;
   text-align: center;
+  font-size: 1.4rem;
 }
 
 @keyframes fadeIn {
