--- a/src/App.css
+++ b/src/App.css
@@ -17,12 +17,12 @@
   width: 100%;
   max-width: 40rem;
   padding: 0.25em 2em;
-  border-radius: 0.4rem;
+  border-radius: var(--radius);
   border: 1px solid;
   color: var(--error-color);
   font-weight: 600;
   text-align: center;
-  font-size: 1.4rem;
+  font-size: 0.85em;
 }
 
 @keyframes fadeIn {
