--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,18 @@
 
 .container {
   width: 100%;
+  height: 100vh;
   max-width: 102.4rem;
   margin-inline: auto;
   padding-inline: 2em;
+  overflow: auto;
+  scroll-snap-type: y mandatory;
+}
+
+.section {
+  padding-top: 2em;
+  padding-bottom: 1.25em;
+  scroll-snap-align: start;
 }
 
 .alert {
