--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,8 @@
 .container {
   width: 100%;
   max-width: 102.4rem;
-  margin-left: 0;
-  margin-right: 0;
-  padding: 0 1em;
+  margin-inline: auto;
+  padding-inline: 2em;
 }
 
 .alert {
@@ -23,10 +22,12 @@
   text-align: center;
 }
 
-@media screen and (min-width: 768px) {
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0;
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
