--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 *,
@@ -18,12 +20,14 @@ html {
   --primary-color: hsl(246, 80%, 60%);
   --error-color: hsl(2, 100%, 64%);
   /* FONT SIZE */
-  --font-base: 1.6rem;
-  --font-small: 1.4rem;
-  --font-smaller: 1.2rem;
-
+  --font-base: 1.6em;
+  --font-small: 1.4em;
+  --font-smaller: 1.2em;
+  /* FONT FAMILY */
+  --font-body: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   /* OTHER */
-
   --radius: 0.375em;
   --shadow: 0 0.25em 2.2rem hsla(220, 13%, 10%, 0.25);
 }
@@ -35,32 +39,22 @@ lg	1024px	@media (min-width: 1024px) { ... }
 xl	1280px	@media (min-width: 1280px) { ... }
 2xl	1536px	@media (min-width: 1536px) { ... } */
 
-@media screen and (min-width: 1280px) {
-  :root {
-    --font-base: 1.8rem;
-    --font-small: 1.6rem;
-    --font-smaller: 1.4rem;
-  }
-}
-
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: var(--font-body);
   font-size: var(--font-base);
   background-color: var(--body--color);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 img {
+  display: block;
+  min-width: 100%;
   max-width: 100%;
   height: auto;
 }
@@ -74,15 +68,5 @@ a {
 
 button,
 input {
-  font-size: 1.6rem;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
+  font-size: 1em;
 }
