--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ body {
   padding: 0;
   font-family: var(--font-body);
   font-size: var(--font-base);
+  color: var(--body--color);
   background-color: var(--body--color);
 }
 
@@ -57,6 +58,8 @@ img {
   min-width: 100%;
   max-width: 100%;
   height: auto;
+  object-fit: cover;
+  object-position: center center;
 }
 
 a {
