--- a/src/components/common/home/HomeFeed/index.css
+++ b/src/components/common/home/HomeFeed/index.css
@@ -1,7 +1,8 @@
 .Home {
   height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-flow: nowrap column;
+  justify-content: center;
   align-items: center;
   color: white;
 }
@@ -30,7 +31,6 @@
 }
 
 .Home__searches {
-  width: 86%;
   max-width: 80rem;
   display: flex;
   flex-wrap: wrap;
