--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   color: var(--font-color);
+  overflow-y: auto;
+  scroll-snap-type: y mandatory;
 }
 
 .container {
@@ -11,8 +13,6 @@
   max-width: 102.4rem;
   margin-inline: auto;
   padding-inline: 2em;
-  overflow: auto;
-  scroll-snap-type: y mandatory;
 }
 
 .section {
