--- a/src/components/common/home/HomeFeed/index.css
+++ b/src/components/common/home/HomeFeed/index.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-flow: nowrap column;
   justify-content: center;
+  row-gap: 0.75em;
   align-items: center;
   color: white;
 }
@@ -22,6 +23,7 @@
   opacity: 0.85;
   margin: 0;
   margin-bottom: 1em;
+  font-size: 1.25em;
 }
 
 .Home form {
@@ -31,13 +33,14 @@
 }
 
 .Home__searches {
-  min-height: 6rem;
+  min-height: 14rem;
   max-width: 80rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  gap: 0.25em 1em;
   margin-inline: auto;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-content: start;
+  gap: 0.5em 1em;
 }
 
 .Home__searches a {
