--- a/src/components/Gif.css
+++ b/src/components/Gif.css
@@ -1,34 +1,14 @@
 .Gif {
-  position: relative;
   width: 100%;
-  min-height: 28rem;
-  max-height: 30rem;
-  border-radius: 0.25em;
-  background-color: var(--body--color-alt);
-  box-shadow: var(--shadow);
-  overflow: hidden;
-  font-size: 1.125em;
+  max-width: 30rem;
 }
 
 .Gif img {
-  display: block;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  aspect-ratio: 1;
+  border-radius: var(--radius);
 }
 
 .Gif__name {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  padding: 1.25em 1em;
-  margin: 0;
-  font-weight: 600;
-  color: var(--white);
-  white-space: nowrap;
-  background-color: var(--primary-color);
-  opacity: 0.85;
+  opacity: 0.9;
+  font-size: 0.75em;
 }
