--- a/src/components/shared/SearchBar/index.css
+++ b/src/components/shared/SearchBar/index.css
@@ -4,9 +4,15 @@
   top: 0;
   z-index: 50;
   width: 100%;
-  height: 7.5rem;
+  padding-block: 1em;
   overflow: hidden;
-  background-color: var(--body-color);
+  background-color: var(--body--color);
+  transition: background-color 420ms ease-in-out;
+}
+
+.SearchBar.is-transparent {
+  background-color: hsla(220, 13%, 18%, 0.2);
+  backdrop-filter: blur(10px);
 }
 
 .SearchBar .Logo {
@@ -26,7 +32,6 @@
 
 .SearchBar .form {
   display: flex;
-  flex-flow: row nowrap;
   column-gap: 1em;
   flex-grow: 1;
   margin-inline: auto;
@@ -39,4 +44,15 @@
 .SearchBar .form__input,
 .SearchBar .form__submit {
   box-shadow: none;
+}
+
+@media screen and (min-width: 768px) {
+  .SearchBar {
+    height: 7.5rem;
+    padding-block: 0;
+  }
+
+  .SearchBar .form {
+    flex-flow: row nowrap;
+  }
 }
