--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ code {
 
 img {
   display: block;
-  min-width: 100%;
+  width: 100%;
   max-width: 100%;
   object-fit: cover;
   object-position: center center;
