--- a/src/pages/Detail/index.css
+++ b/src/pages/Detail/index.css
@@ -14,6 +14,10 @@
 }
 
 .Detail__item img {
-  display: block;
-  max-height: 90vh;
+  width: 100%;
+  max-width: 80rem;
+  aspect-ratio: 16/9;
+  margin-inline: auto;
+  border-radius: var(--radius);
+  background-color: var(--primary--color);
 }
